crates/lang/tests/ui/contract/fail/config-keep-attr-invalid-type.rs
use ink_lang as ink;

#[ink::contract(keep_attr = true)]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
