crates/lang/tests/ui/contract/fail/config-keep-attr-invalid-type.stderr
error: expected a string with attributes separated by `,`
 --> tests/ui/contract/fail/config-keep-attr-invalid-type.rs:3:17
  |
3 | #[ink::contract(keep_attr = true)]
  |                 ^^^^^^^^^^^^^^^^
